--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "lib": [ "es2015" ]
+    "lib": [ "es2015","dom" ]
   },
   "exclude": ["node_modules", "dist"]
 }
