--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@videojs-player/vue": "^1.0.0",
     "axios": "^1.6.8",
     "echarts": "^5.5.0",
     "element-plus": "^2.7.2",
+    "video.js": "^8.12.0",
+    "videojs-contrib-hls": "^5.15.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
